--- a/MSSQL_database_list.conf
+++ b/MSSQL_database_list.conf
@@ -1,9 +1,14 @@
-# Format: <instance_name>,<host_ip>,<database_name>
-# The host_ip is for reference; the script will use the static IP address defined in sql_credentials.conf
-# The instance_name is used to construct the GCS path and file name.
-# Databases to be backed up:
-
-ti-aiprod-ms-primary-01,10.245.8.25,DBAdmin
-#ti-aiprod-ms-primary-01,10.245.8.25,Database2
-#ti-aiprod-ms-primary-01,10.245.8.25,Database3
-# Add other databases here in the same format
+SSQL_database_list.conf" 15L, 824B                                                                                                                                                                          13,68         All
+ti-aiprod-ms-primary-01,10.245.8.25,DBAdmin,ti-ai-production
+ti-aiprod-ms-primary-01,10.245.8.25,master,ti-ai-production
+ti-aiprod-ms-primary-01,10.245.8.25,msdb,ti-ai-production
+ti-aiprod-ms-primary-01,10.245.8.25,wrtapp,ti-ai-production
+ti-aiprod-ms-primary-01,10.245.8.25,DEWDB,ti-ai-production
+ti-aiprod-ms-primary-01,10.245.8.25,Roster,ti-ai-production
+ti-aiprod-ms-primary-01,10.245.8.25,tiai_amz_vcare,ti-ai-production
+ti-aiprod-ms-primary-01,10.245.8.25,tiai_amz_hld,ti-ai-production
+ti-aiprod-ms-primary-01,10.245.8.25,Metadata,ti-ai-production
+ti-aiprod-ms-primary-01,10.245.8.25,LRMTDB,ti-ai-production
+ti-aiprod-ms-primary-01,10.245.8.25,tiai_amz_lex,ti-ai-production
+ti-aiprod-ms-primary-01,10.245.8.25,GSSOnboardingPortal,ti-ai-production
+ti-aiprod-ms-primary-01,10.245.8.25,tiaiextensiondb,ti-ai-production
