--- a/sql_credentials.conf
+++ b/sql_credentials.conf
@@ -1,3 +1,6 @@
+# --- Service Account  Details ---
+SERVICE_ACCOUNT_KEY_FILE="/root/jsonfiles/ti-dba-prod-01.json"
+
 # --- Google Cloud Storage Details ---
 # The exact name of the Cloud Storage bucket.
 GCS_BUCKET_NAME="ti-dba-prod-sql-01"
